# bydit

./: .gitignore  Cargo.toml  README.md  TODO.md
packaging/arch/: .SRCINFO  PKGBUILD
packaging/deb/debian/: changelog  control  copyright  install  rules
packaging/rpm/: bydit.spec
src/: actions.rs  cli.rs  config.rs  main.rs  models.rs  reddit_ops.rs  utils.rs
tests/: cli_execution.rs
