[package]
name = "bydit"
version = "1.0.0"
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[dependencies]
roux = "2.2"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3"
humantime = "2.1"
chrono = "0.4"
